# vectra

./: .gitignore  CMakeLists.txt  README.md  __init__.py  setup.py
KerLow/: CMakeLists.txt
KerLow/ScalarType/: ScalarType.h
TenLib/: CMakeLists.txt
TenLib/cpu/: TensorOps.h
python/: pyvectra.py
python/binding/: CMakeLists.txt  __init__.py  binding.cc  test.py
pyvectra.egg-info/: SOURCES.txt
test/: CMakeLists.txt  main.cpp
utils/: CMakeLists.txt
utils/VectorUtility/: vector.h
